--- a/client/src/lang/components/BottomContact.json
+++ b/client/src/lang/components/BottomContact.json
@@ -11,7 +11,7 @@
             }
         },
         "phone": {
-            "placeholder": "Telefonnummer (freiwillig)",
+            "placeholder": "Telefonnummer ",
             "validation": {
                 "positive": "Die Telefonnummer darf nicht negativ sein",
                 "integer": "Die Telefonnummer darf nicht dezimal sein",
@@ -26,7 +26,7 @@
             }
         },
         "message": {
-            "placeholder": "Nachricht (optional)"
+            "placeholder": "Nachricht"
         },
         "submit": "Schicken",
         "notifications": {
