--- a/client/src/lang/routes.json
+++ b/client/src/lang/routes.json
@@ -5,8 +5,8 @@
             "/custom-web-entwicklung": "process",
             "/": "home",
             "/login": "login",
-            "/internetseite": "services",
-            "/internetseite_dev": "services_dev",
+            "/blogs": "services",
+            "/blogs_dev": "services_dev",
             "/technologien": "technologies",
             "/arbeite-mit-uns": "workWithUs",
             "/datenschutz": "datenschutz",
@@ -49,7 +49,7 @@
             "process": "custom-web-entwicklung",
             "home": "/",
             "login": "login",
-            "services": "internetseite",
+            "services": "blogs",
             "services_dev": "pagina-web_dev",
             "technologies": "technologien",
             "workWithUs": "arbeite-mit-uns",
