Revert "Update texts"
This reverts commit 9b9214aa125f7bc1e1f4390d60a05c15d46bfb47.

--- a/client/src/lang/routes.json
+++ b/client/src/lang/routes.json
@@ -5,8 +5,8 @@
             "/custom-web-entwicklung": "process",
             "/": "home",
             "/login": "login",
-            "/blogs": "services",
-            "/blogs_dev": "services_dev",
+            "/internetseite": "services",
+            "/internetseite_dev": "services_dev",
             "/technologien": "technologies",
             "/arbeite-mit-uns": "workWithUs",
             "/datenschutz": "datenschutz",
@@ -49,7 +49,7 @@
             "process": "custom-web-entwicklung",
             "home": "/",
             "login": "login",
-            "services": "blogs",
+            "services": "internetseite",
             "services_dev": "pagina-web_dev",
             "technologies": "technologien",
             "workWithUs": "arbeite-mit-uns",
