--- a/client/src/lang/services/blog.json
+++ b/client/src/lang/services/blog.json
@@ -1,7 +1,7 @@
 {
     "de": {
         "slogan": {
-            "description": "Ihr Weg zur Digitalisierung"
+            "description": ""
         },
         "articles": {
             "title": "Andere Dienstleistungen",
